--- a/web/SecurityQuestion.xhtml
+++ b/web/SecurityQuestion.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Created by Hung Vu on 2016.04.07 
-Copyright Â© 2016 Hung Vu. All rights reserved.
+Created by Kevin Vu on 2016.04.07 
+Copyright © 2016 Kevin Vu. All rights reserved.
 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
